# gamedevbench

./: .env.example  .gitignore  CLAUDE.md  README.md  outliers_baseline.yaml  pyproject.toml  tasks.yaml  test_task.yaml  unzip_tasks.sh  validate_tasks.py
.claude/: settings.json
.claude/hooks/: commit_reminder.py  guard_sensitive.py
.claude/skills/new-task/: SKILL.md
.claude/skills/run-benchmark/: SKILL.md
gamedevbench/src/: base_solver.py  benchmark_runner.py  claude_code_solver.py  codex_solver.py  gemini_solver.py  godot_ai_editor.py  mcp_registry.py  mcp_server.py  mcp_servers.py  openhands_solver.py  solver_factory.py
gamedevbench/src/utils/: constants.py  data_types.py  env.py  llm_keys.py  prompts.py
tests/: conftest.py  test_constants.py  test_data_types.py  test_env.py  test_godot_ai_editor.py  test_hooks.py  test_llm_keys.py  test_mcp_registry.py  test_mcp_server.py  test_mcp_servers.py  test_openhands_godot_ai.py  test_openhands_timeout.py  test_parallel_runner.py  test_prompts.py  test_sandbox_import_cache.py  test_solver_factory.py  test_validate_tasks.py  test_validation.py
